# OOP_lab5

./: CMakeLists.txt  main.cpp  test.cpp
include/: memory_resource.hpp  pmr_queue.hpp
